--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ jobs:
       # install the dependencies from a package.json and automatically cache them for faster future runs.
       - node/install-packages
       - run:
-          name: Run tests
-          command: npm test
+          name: Run frontend tests
+          command: npm run frontend:test
       - run:
           name: Install Frontend Dependencies
           command: npm run frontend:install
