--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "scripts": {
         "frontend:test": "cd udagram-frontend && npm run test",
         "frontend:install": "cd udagram-frontend && npm install",
-        "backend:install": "cd udagram-api && npm install"
+        "frontend:build": "cd udagram-frontend && npm run build",
+        "backend:install": "cd udagram-api && npm install",
+        "backend:build": "cd udagram-api && npm run build"
     }
 }
