--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
     docker:
       - image: cimg/node:15.1
+        environment:
+          CHROME_BIN: /usr/bin/google-chrome
     # CircleCI will report the results back to your VCS provider.
     steps:
       - node/install
