--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "frontend:test": "cd udagram-frontend && npm run test",
+        "frontend:test": "cd udagram-frontend && npm run ci:test",
         "frontend:install": "cd udagram-frontend && npm install",
         "frontend:build": "cd udagram-frontend && npm run build",
         "backend:install": "cd udagram-api && npm install",
