--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -8,6 +8,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "ci:test": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
