--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
         "frontend:test": "cd udagram-frontend && npm run ci:test",
         "frontend:install": "cd udagram-frontend && npm install",
         "frontend:build": "cd udagram-frontend && npm run build",
+        "fontend:deploy": "cd udagram-frontend && npm run deploy",
         "backend:install": "cd udagram-api && npm install",
-        "backend:build": "cd udagram-api && npm run build"
+        "backend:build": "cd udagram-api && npm run build",
+        "backend:deploy": "cd udagram-api && npm run deploy"
     }
 }
