--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "ci:test": "ng test --watch=false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "chmod +x bin/deploy.sh && bin/deploy.sh"
   },
   "private": true,
   "dependencies": {
