--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -2,7 +2,7 @@
   "name": "udagram-api",
   "version": "2.0.0",
   "description": "",
-  "main": "src/server.ts",
+  "main": "server.js",
   "scripts": {
     "start": "node .",
     "tsc": "tsc",
@@ -21,35 +21,35 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/jsonwebtoken": "^8.3.2",
-    "aws-sdk": "^2.429.0",
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.18.3",
+    "@types/jsonwebtoken": "^8.5.0",
+    "aws-sdk": "2.863.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.9.0",
+    "pg": "8.5.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.4",
-    "sequelize-typescript": "^0.6.9"
+    "sequelize": "6.5.0",
+    "sequelize-typescript": "2.1.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.26",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.16.1",
-    "@types/node": "^11.11.6",
-    "@types/sequelize": "^4.27.44",
-    "@types/validator": "^10.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
+    "@types/bluebird": "^3.5.33",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/node": "^11.15.48",
+    "@types/sequelize": "^4.28.9",
+    "@types/validator": "^10.11.3",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^6.1.4",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.3.4000"
+    "mocha": "^6.2.3",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "4.2.3"
   }
 }
