--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -2,7 +2,7 @@
   "name": "udagram-api",
   "version": "2.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "www/server.js",
   "scripts": {
     "start": "node .",
     "tsc": "tsc",
@@ -23,14 +23,15 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "aws-sdk": "2.863.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "is-core-module": "^2.4.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "8.5.1",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "6.5.0",
     "sequelize-typescript": "2.1.0"
