--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ orbs:
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@4.1
   browser-tools: circleci/browser-tools@1.1.3
-
+  aws-cli: circleci/aws-cli@1.3.1
+  aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@1.0.2
 
 jobs:
   build:  
@@ -19,33 +20,29 @@ jobs:
       - image: cimg/node:15.0.1-browsers
     # CircleCI will report the results back to your VCS provider.
     steps:
-      - browser-tools/install-chrome
       - node/install
+      - aws-cli/setup
+      - eb/setup
       - checkout
       - run:
-          name: Install Frontend Dependencies
-          command: npm run frontend:install
-      - run:
-          name: Build Frontend
-          command: npm run frontend:build
-      - run:
-          name: Run Frontend tests
-          command: npm run frontend:test
-      - run:
-          name: Install Backend Dependencies
+          name: Backend - Install Dependencies
           command: npm run backend:install
       - run:
-          name: Build Backend
+          name: Backend - Build
           command: npm run backend:build
-  deploy:
-    docker:
-      - image: cimg/node:15.0.1-browsers
-    steps:
-      - browser-tools/install-chrome
-      - node/install
       - run:
-          name: Deploy Application
-          command: npm run deploy
+          name: Backend - Deploy
+          command: npm run backend:deploy
+      - run:
+          name: Frontend - Install Dependencies
+          command: npm run frontend:install
+      - run:
+          name: Frontend - Build
+          command: npm run frontend:build
+      - run:
+          name: Frontend - Run Tests
+          command: npm run frontend:test
+
     
 
 workflows:
