--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks. 
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@4.1
-  browser-tools: circleci/browser-tools@1.1.3
   aws-cli: circleci/aws-cli@1.3.1
-  aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@1.0.2
+  aws-eb: circleci/aws-elastic-beanstalk@1.0.2
 
 jobs:
   build:  
@@ -22,7 +21,7 @@ jobs:
     steps:
       - node/install
       - aws-cli/setup
-      - eb/setup
+      - aws-eb/setup
       - checkout
       - run:
           name: Backend - Install Dependencies
