--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks. 
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@4.1
+  browser-tools: circleci/browser-tools@1.1.3
   aws-cli: circleci/aws-cli@1.3.1
   aws-eb: circleci/aws-elastic-beanstalk@1.0.2
 
@@ -19,6 +20,7 @@ jobs:
       - image: cimg/node:15.0.1-browsers
     # CircleCI will report the results back to your VCS provider.
     steps:
+      - browser-tools/install-chrome
       - node/install
       - aws-cli/setup
       - aws-eb/setup
